k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-base
  labels:
    name: django-base
    environment: base
